# vnpy_tap

./: .gitignore  CHANGELOG.md  MANIFEST.in  README-origin.md  README.md  meson.build  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pythonapp.yml
script/: run.py
vnpy_tap/: __init__.py
vnpy_tap/api/: __init__.py  libcrypto.so.1.1  libssl.so.1.1  tap_md_constant.py  tap_td_constant.py  vntapmd.cp37-win_amd64.pyd  vntaptd.cp37-win_amd64.pyd
vnpy_tap/api/generator/: generate_api_commdef.py  generate_api_error.py  generate_api_functions.py  generate_data_type.py  tap_md_commen_constant.py  tap_md_error_constant.py  tap_md_header_function.h  tap_md_source_function.cpp  tap_md_source_task.cpp  tap_td_commen_constant.py  tap_td_commen_struct.py  tap_td_commen_typedef.py  tap_td_data_constant.py  tap_td_data_struct.py  tap_td_data_typedef.py  tap_td_error_constant.py  tap_td_header_define.h  tap_td_header_function.h  tap_td_header_on.h  tap_td_header_process.h  tap_td_source_function.cpp  tap_td_source_module.cpp  tap_td_source_on.cpp  tap_td_source_process.cpp  tap_td_source_switch.cpp  tap_td_source_task.cpp
vnpy_tap/api/include/tap/: iTapAPICommDef.h  iTapAPIError.h  iTapDataCollectAPI.h  iTapTradeAPI.h  iTapTradeAPIDataType.h
vnpy_tap/api/libs/: iTapTradeAPI_64.lib
vnpy_tap/api/vntap/vntapmd/: vntapmd.cpp
vnpy_tap/api/vntap/vntaptd/: vntaptd.cpp  vntaptd.h  vntaptd.vcxproj
vnpy_tap/gateway/: __init__.py  tap_gateway.py
